[gd_scene load_steps=5 format=3 uid="uid://8moo65tj8xpu"]

[ext_resource type="PackedScene" uid="uid://bpb3irbilm2vu" path="res://scenes/ui/gameplay/StatusOverlay.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/ui/gameplay/GameplayUI.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bo5gkvwxxinew" path="res://scenes/debug/DebugOverlay.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dmo02hsleajx4" path="res://scenes/ui/gameplay/PauseMenu.tscn" id="6"]

[node name="GameplayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="StatusOverlay" parent="." instance=ExtResource("1")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="DebugOverlay" parent="." instance=ExtResource("3")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.12
anchor_bottom = 1.0
grow_vertical = 2

[node name="PauseMenu" parent="." instance=ExtResource("6")]
visible = false
layout_mode = 1
